[gd_scene load_steps=18 format=2]

[ext_resource path="res://Menus/LevelsMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/Title-Menus.png" type="Texture" id=2]
[ext_resource path="res://Menus/Button-Normal.png" type="Texture" id=3]
[ext_resource path="res://Menus/Button-Hover.png" type="Texture" id=4]
[ext_resource path="res://Menus/Numbers-Levels.png" type="Texture" id=5]
[ext_resource path="res://Menus/Buttons-Icons.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 400, 150 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 500, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 500, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 500, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 500, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 500, 200, 100, 100 )

[node name="LevelsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 50.0
margin_right = 200.0
margin_bottom = 150.0
texture = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 125.0
custom_constants/separation = 15
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 1080.0
margin_bottom = 290.0
custom_constants/separation = 15
alignment = 1

[node name="LevelButton-01" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 332.0
margin_right = 532.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Number" type="TextureRect" parent="VBoxContainer/HBoxContainer/LevelButton-01"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 75, 75 )
rect_pivot_offset = Vector2( 50, 50 )
texture = SubResource( 2 )

[node name="Padlock" type="TextureRect" parent="VBoxContainer/HBoxContainer/LevelButton-01" groups=[
"Padlock",
]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
rect_min_size = Vector2( 75, 75 )
rect_pivot_offset = Vector2( 50, 50 )
texture = SubResource( 7 )

[node name="LevelButton-02" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 547.0
margin_right = 747.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Number" type="TextureRect" parent="VBoxContainer/HBoxContainer/LevelButton-02"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
texture = SubResource( 3 )

[node name="Padlock" type="TextureRect" parent="VBoxContainer/HBoxContainer/LevelButton-02" groups=[
"Padlock",
]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
rect_min_size = Vector2( 75, 75 )
rect_pivot_offset = Vector2( 50, 50 )
texture = SubResource( 8 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 305.0
margin_right = 1080.0
margin_bottom = 505.0
custom_constants/separation = 15
alignment = 1

[node name="LevelButton-03" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 225.0
margin_right = 425.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Number" type="TextureRect" parent="VBoxContainer/HBoxContainer2/LevelButton-03"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
texture = SubResource( 4 )

[node name="Padlock" type="TextureRect" parent="VBoxContainer/HBoxContainer2/LevelButton-03" groups=[
"Padlock",
]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
rect_min_size = Vector2( 75, 75 )
rect_pivot_offset = Vector2( 50, 50 )
texture = SubResource( 9 )

[node name="LevelButton-04" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 440.0
margin_right = 640.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Number" type="TextureRect" parent="VBoxContainer/HBoxContainer2/LevelButton-04"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
texture = SubResource( 5 )

[node name="Padlock" type="TextureRect" parent="VBoxContainer/HBoxContainer2/LevelButton-04" groups=[
"Padlock",
]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
rect_min_size = Vector2( 75, 75 )
rect_pivot_offset = Vector2( 50, 50 )
texture = SubResource( 10 )

[node name="LevelButton-05" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 655.0
margin_right = 855.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Number" type="TextureRect" parent="VBoxContainer/HBoxContainer2/LevelButton-05"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
texture = SubResource( 6 )

[node name="Padlock" type="TextureRect" parent="VBoxContainer/HBoxContainer2/LevelButton-05" groups=[
"Padlock",
]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
rect_min_size = Vector2( 75, 75 )
rect_pivot_offset = Vector2( 50, 50 )
texture = SubResource( 11 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/LevelButton-01" to="." method="_on_LevelButton01_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LevelButton-02" to="." method="_on_LevelButton02_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/LevelButton-03" to="." method="_on_LevelButton03_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/LevelButton-04" to="." method="_on_LevelButton04_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/LevelButton-05" to="." method="_on_LevelButton05_pressed"]
